# example-swift-antlr-bazel

./: .gitignore  WORKSPACE
arith/: Arith.g4  BUILD.bazel  main.swift
bazel/: antlr4_swift_runtime.BUILD
